<resources>
    <string name="app_name">DeliFood</string>
    <string name="title_home">Home</string>
    <string name="title_my_recipe">My Recipe</string>
    <string name="title_my_account">My Account</string>
    <string name="title_main_recipe">Recipe</string>
    <string name="title_list_category">Category</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_default_recipe_desc">Image default recipe description</string>
    <string name="title">Judul</string>
    <string name="origin_main_recipe">Asal Daerah: </string>
    <string name="ingredients_main_recipe">Bahan: </string>
    <string name="procedure_main_recipe">Cara Memasak: </string>
    <string name="blank">blank</string>
    <string name="ic_pencil">Image Edit</string>
    <string name="ic_trash">Image Delete</string>
    <string name="desc_recipe">Recipe</string>
    <string name="img_landing_page">Image Landing Page</string>
    <string name="search">Cari</string>
    <string name="title_home_category">Kategori</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="forgot_password">Lupa Sandi</string>
    <string name="submit">Kirim</string>
    <string name="desc_forgot_password">Masukkan username atau email Anda. Kami akan mengirimkan pada Anda email untuk mengatur ulang sandi Anda</string>
    <string name="email_sent_success">Email telah berhasil dikirim untuk mengatur ulang kata sandi</string>
    <string name="q_register">Belum ada akun?</string>
    <string name="q_login">Sudah ada akun?</string>
    <string name="username">Username</string>
    <string name="firstname">Nama Depan</string>
    <string name="lastname">Nama Belakang</string>
    <string name="email_id">Email ID</string>
    <string name="password">Kata Sandi</string>
    <string name="sign_out">Keluar</string>
    <string name="detail_valid">Data yang kamu masukkan sudah benar </string>
    <string name="login_successfull">Kamu Telah Berhasil Masuk</string>
    <string name="register_successfull">Kamu Telah Berhasil Mendaftar</string>
    <string name="confirm_password">Masukkan Ulang Kata Sandi</string>
    <string name="create_account">Membuat AKun</string>
    <string name="err_msg_enter_first_name">Tolong masukkan nama depan </string>
    <string name="err_msg_enter_last_name">Tolong masukkan nama belakang</string>
    <string name="err_msg_enter_email">Tolong masukkan email</string>
    <string name="err_msg_enter_password">Tolong masukkan kata sandi</string>
    <string name="err_msg_enter_confirm_password">Tolong masukkan konfirmasi kata sandi</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Kata sandi dan konfirmasi kata sandi tidak cocok</string>
    <string name="registery_successfull">Terima kasih sudah mendaftar!</string>
    <string name="please_wait">Tunggu Sebentar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>