<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home" >

    <fragment
        android:id="@+id/navigation_home"
        android:name="ac.id.del.delifood.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_HomeFragment_to_MainRecipeFragment"
            app:destination="@id/navigation_main_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main_recipe"
        android:name="ac.id.del.delifood.ui.mainRecipe.MainRecipeFragment"
        android:label="@string/title_main_recipe"
        tools:layout="@layout/fragment_main_recipe" >
        <action
            android:id="@+id/action_MainRecipeFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_recipe"
        android:name="ac.id.del.delifood.ui.myRecipe.MyRecipeFragment"
        android:label="@string/title_my_recipe"
        tools:layout="@layout/fragment_my_recipe">

        <action
            android:id="@+id/action_MyRecipeFragment_to_AddRecipeFragment"
            app:destination="@id/navigation_add_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="ac.id.del.delifood.ui.myAccount.MyAccountFragment"
        android:label="@string/title_my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/navigation_add_recipe"
        android:name="ac.id.del.delifood.ui.addRecipe.AddRecipeFragment"
        android:label="@string/title_add_recipe"
        tools:layout="@layout/fragment_add_recipe" >

        <action
            android:id="@+id/action_AddRecipeFragment_to_MyRecipeFragment"
            app:destination="@id/navigation_my_recipe" />
    </fragment>

</navigation>