<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp" >

            <ImageView
                android:id="@+id/image_my_recipe"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/title"
                android:background="@drawable/ic_sotobetawi_background" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/text_my_recipe_item"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/blank"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ic_pencil"
                android:src="@drawable/icon_pencil" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ic_trash"
                android:src="@drawable/icon_trash" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>