<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/create_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/icon_person_login"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_activity"
        app:layout_constraintBottom_toTopOf="@+id/app_name_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ac.id.del.delifood.utils.InterTextViewBold
        android:id="@+id/app_name_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/icon_person_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_name_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="25dp" >

                    <ac.id.del.delifood.utils.InterEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/firstname"
                        android:paddingHorizontal="20dp"
                        android:textColorHint="#757575"
                        android:autofillHints=""
                        android:inputType="" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:cardCornerRadius="25dp" >

                    <ac.id.del.delifood.utils.InterEditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/lastname"
                        android:paddingHorizontal="20dp"
                        android:textColorHint="#757575"
                        android:autofillHints=""
                        android:inputType="" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="25dp" >

                    <ac.id.del.delifood.utils.InterEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/email_id"
                        android:paddingHorizontal="20dp"
                        android:textColorHint="#757575"
                        android:autofillHints=""
                        android:inputType="" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    app:cardCornerRadius="25dp" >

                    <ac.id.del.delifood.utils.InterEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/password"
                        android:paddingHorizontal="20dp"
                        android:textColorHint="#757575"
                        android:autofillHints=""
                        android:inputType="" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="25dp" >

                    <ac.id.del.delifood.utils.InterEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:hint="@string/confirm_password"
                        android:paddingHorizontal="20dp"
                        android:textColorHint="#757575"
                        android:autofillHints=""
                        android:inputType="" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ac.id.del.delifood.utils.InterButton
                android:id="@+id/button_register"
                style="@style/btn_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="16sp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_login"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" >

                <ac.id.del.delifood.utils.InterTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q_login"
                    android:textSize="13sp"/>

                <ac.id.del.delifood.utils.InterTextViewBold
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>