<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/icon_person_forgot_password"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_forgot_password_activity"
        app:layout_constraintBottom_toTopOf="@+id/app_name_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ac.id.del.delifood.utils.InterTextViewBold
        android:id="@+id/app_name_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/icon_person_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/edit_text_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/app_name_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ac.id.del.delifood.utils.InterTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="22sp"
            android:textAlignment="center" />

        <ac.id.del.delifood.utils.InterTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_forgot_password"
            android:textSize="14sp"
            android:textAlignment="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="25dp" >

            <ac.id.del.delifood.utils.InterEditText
                android:id="@+id/et_email_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/email_id"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:autofillHints=""
                android:inputType="" />
        </androidx.cardview.widget.CardView>

        <ac.id.del.delifood.utils.InterButton
            android:id="@+id/button_forgot_password"
            style="@style/btn_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_forgot_password"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>