<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/icon_person_login"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/app_name_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/app_name_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintTop_toBottomOf="@+id/icon_person_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/app_name_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:background="@color/primaryColor">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:backgroundTint="@color/secondaryColor"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/username"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:autofillHints=""
                android:inputType="" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@color/primaryColor"
            app:cardCornerRadius="25dp" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:backgroundTint="@color/secondaryColor"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:autofillHints=""
                android:inputType="" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/btn_landing_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_login"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_daftar"
            android:fontFamily="@font/poppinsregular"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/txt_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/primaryColor"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>